crates/templates/tests/snapshots/parse_option_arguments_test__impl-4.snap
---
source: crates/templates/tests/parse_option_arguments_test.rs
expression: output
---
while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in

      -B | --fbar)
        args['--fbar']=1
        shift
        ;;
      --fbaz)
        args['--fbaz']=1
        shift
        ;;
      -F | --ffoo)
        args['--ffoo']=1
        shift
        ;;
      --bar)
        args['bar']=$2
        shift 2
        ;;

      --baz)
        args['baz']=$2
        shift 2
        ;;

      --foo)
        args['foo']=$2
        shift 2
        ;;

      # We handle the --help option to support passing it to sub-commands.
      -h|--help)
        args['--help']=1
        shift 1
        ;;

      -?*)
        printf "invalid option: %s\n" "$key" >&2
        exit 1
        ;;

      *)
        printf "Invalid argument: %s\n" "$key" >&2
        exit 1
        ;;
    esac
  done


