crates/templates/tests/snapshots/parse_option_arguments_test__render.snap
---
source: crates/templates/tests/parse_option_arguments_test.rs
expression: output
---
while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in

      -?*)
        printf "invalid option: %s\n" "$key" >&2
        exit 1
        ;;

      *)printf "Invalid argument: %s\n" "$key" >&2
        exit 1;;
    esac
  done


